complete crude no frontend no testing

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,1 +1,7 @@
-<h1> Display Tasks <h1>
+<h1> Display Tasks </h1>
+<p>Title: <%= @task.title %></p>
+<p>Details: <%= @task.details %></p>
+<p>Completedle: <%= @task.completed %></p>
+
+<p><%= link_to "index", root_path %></p>
+
