--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,9 +2,12 @@
 <div>
 <ul>
 <% @tasks.each do |task| %>
-<li><%= link_to task.title, tasks_path(task) %> </li>
+<li><%= link_to task.title, task_path(task) %> </li>
+<li><%= link_to "Edit", edit_task_path(task) %></li>
+<li><%= link_to "Delete", task_path(task),data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></li>
 <% end %>
 </ul>
+<%= link_to "make a new task", new_task_path %>
 </div>
 
 
